@@ -232,8 +232,9 @@ tstMatrixClass <-
             symC <- extends(clD, "symmetricMatrix")
             triC <- extends(clD, "triangularMatrix")
             diaC <- extends(clD, "diagonalMatrix")
-            if(!(genC || symC || triC || diaC))
-                stop("does not extend one of 'general', 'symmetric', 'triangular', or 'diagonal'")
+            indC <- extends(clD, "indMatrix")
+            if(!(genC || symC || triC || diaC || indC))
+                stop("does not extend one of 'general', 'symmetric', 'triangular', 'diagonal', 'ind'")
             sparseC <- extends(clD, "sparseMatrix")
             denseC  <- extends(clD, "denseMatrix")
             if(!(sparseC || denseC))
